[OG-88] Fix tests