@@ -1,9 +1,11 @@
 package com.agh.polymorphia_backend.service.hall_of_fame;
 
 import com.agh.polymorphia_backend.model.course.Course;
+import com.agh.polymorphia_backend.model.event_section.AssignmentSection;
 import com.agh.polymorphia_backend.model.hall_of_fame.HallOfFame;
 import com.agh.polymorphia_backend.model.hall_of_fame.StudentScoreDetail;
 import com.agh.polymorphia_backend.model.user.User;
+import com.agh.polymorphia_backend.repository.course.event_section.EventSectionRepository;
 import com.agh.polymorphia_backend.repository.hall_of_fame.HallOfFameRepository;
 import com.agh.polymorphia_backend.repository.hall_of_fame.StudentScoreDetailRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,9 +16,7 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.math.BigDecimal;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -28,6 +28,8 @@ class HallOfFameServiceTest {
     private HallOfFameRepository hallOfFameRepository;
     @Mock
     private StudentScoreDetailRepository studentScoreDetailRepository;
+    @Mock
+    private EventSectionRepository eventSectionRepository;
 
     @InjectMocks
     private HallOfFameService hallOfFameService;
@@ -70,34 +72,50 @@ class HallOfFameServiceTest {
     void shouldGroupScoreDetailsByAnimalId() {
         StudentScoreDetail detail1 = StudentScoreDetail.builder()
                 .animalId(5L)
+                .eventSectionId(2L)
                 .eventSectionName("Kartkówka")
                 .rawXp(BigDecimal.valueOf(1.8))
                 .build();
         StudentScoreDetail detail2 = StudentScoreDetail.builder()
                 .animalId(5L)
+                .eventSectionId(1L)
                 .eventSectionName("Laboratorium")
                 .rawXp(BigDecimal.valueOf(2))
                 .build();
         StudentScoreDetail detail3 = StudentScoreDetail.builder()
                 .animalId(6L)
+                .eventSectionId(2L)
                 .eventSectionName("Kartkówka")
                 .rawXp(BigDecimal.valueOf(1))
                 .build();
         StudentScoreDetail detail4 = StudentScoreDetail.builder()
                 .animalId(6L)
+                .eventSectionId(2L)
                 .eventSectionName("Kartkówka")
                 .rawXp(BigDecimal.valueOf(2))
                 .build();
 
         List<Long> animalIds=List.of(5L, 6L);
-        List<StudentScoreDetail> details = List.of(detail1, detail2, detail3, detail4);
+        List<StudentScoreDetail> details = Arrays.asList(detail1, detail2, detail3, detail4);
         Map<Long, Map<String, String>> expectedResult=Map.of(
                 5L, Map.of("Kartkówka","1.80", "Laboratorium", "2.00"),
                 6L, Map.of("Kartkówka","2.00")
         );
+        AssignmentSection section1 = AssignmentSection.builder()
+                .id(1L)
+                .name("Laboratorium")
+                .orderIndex(2L)
+                .build();
+        AssignmentSection section2 = AssignmentSection.builder()
+                .id(2L)
+                .name("Kartkówka")
+                .orderIndex(1L)
+                .build();
 
         when(studentScoreDetailRepository.findByAnimalIdIn(animalIds))
                 .thenReturn(details);
+        when(eventSectionRepository.findByIdIn(Set.of(1L, 2L)))
+                .thenReturn(new ArrayList<>(Arrays.asList(section1, section2)));
 
         Map<Long, Map<String, String>> result = hallOfFameService.groupScoreDetails(animalIds);
 
